--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -1,10 +1,12 @@
-
 name: Database Migrations
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Reason for running migration'
+        required: false
+        default: ''
 
 jobs:
   migrate:
